--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>RxJS Boiler</title>
+  <title>RxJS Boiler</title>
 </head>
 <body>
-	<h1>RxJS Boiler</h1>
-	<p>For more info, visit <a target="_blank" href="https://github.com/bradtraversy/rxjs_boiler">https://github.com/bradtraversy/rxjs_boiler</a></p>
+  <h1>RxJS Boiler</h1>
+  <p>For more info, visit <a target="_blank" href="https://github.com/bradtraversy/rxjs_boiler">https://github.com/bradtraversy/rxjs_boiler</a></p>
+  <button id="btn">Click Me!</button>
 
-	<script src="./RxJs/dist/app.bundle.js"></script>
+<script src="./RxJs/dist/app.bundle.js"></script>
 </body>
 </html>
