observable events with jquery

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <h1>RxJS Boiler</h1>
   <p>For more info, visit <a target="_blank" href="https://github.com/bradtraversy/rxjs_boiler">https://github.com/bradtraversy/rxjs_boiler</a></p>
   <button id="btn">Click Me!</button>
-
+  <hr>
+  <input type="text" placeholder="something" id="input"></input>
+  <div id="output"></div>
 <script src="./RxJs/dist/app.bundle.js"></script>
 </body>
 </html>
