--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <hr>
   <input type="text" placeholder="something" id="input"></input>
   <div id="output"></div>
+
+  <ul id="posts"></ul>
+
+
+  <h1 id="name"></h1>
+  <ul>
+    <li id="blog"></li>
+    <li id="repos"></li>
+  </ul>
 <script src="./RxJs/dist/app.bundle.js"></script>
 </body>
 </html>
